# wasm_calculator

./: Cargo.toml  README.md  Trunk.toml  index.html  trunk.html
final/: index.html  main.rs
src/: calc.rs  main.rs
