[package]
name = "wasm_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6.5", features = ["csr"] }
rusty_dumb_tools = {version = "0.1.7", path="../rusty_dumb_tools"}
